--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
         "php": ">=5.6.4",
         "laravel/lumen-framework": "5.3.*",
         "vlucas/phpdotenv": "~2.2",
-        "krisanalfa/lumen-dingo-adapter": "^0.0.2"
+        "krisanalfa/lumen-dingo-adapter": "^0.0.2",
+        "appzcoder/lumen-routes-list": "^1.0",
+        "wn/lumen-generators": "^1.3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
